# PESSCY

./: .buildinfo  .gitignore  README.md  analysis.html  benchmark.html  comparisons.html  generate.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  solve.html  utils.html
.github/workflows/: docs.yml
_sources/: analysis.rst.txt  generate.rst.txt  solve.rst.txt  utils.rst.txt
analysis/: analysis_primitives.py  compare_primitives_random.py
benchmark/: algebraic_attack_benchmark.py  benchmark.sh  generate_parameters.py  perform_experiments.py  perform_experiments_per_thread.sh
comparisons_random/: algebraic_attack_comparison.py  comparisons.sh  perform_experiments.py  perform_experiments_per_thread.sh  random_comparison_parameters.py
doc/: benchmark.rst  comparisons.rst  conf.py  index.rst
experimentalSetup/anemoi/: anemoi_set_0.json  anemoi_set_1.json  anemoi_set_2.json  anemoi_set_3.json
experimentalSetup/anemoiround/: anemoiround_set_0.json
experimentalSetup/griffin/: griffin_set_0.json
experimentalSetup/polocolo/: polocolo_set_0.json  polocolo_set_1.json  polocolo_set_2.json
generate/: generate.py
permutations/: anemoi.py  anemoiround.py  griffin.py  random.py  template.py  zerolith.py
public_doc/: benchmark_input.txt  comparisons_input.txt  groebner_basis_doc.py
scripts/: cli.py
solve/: algebraic_attack.py
tests/: test.sh
utils/: analysis.py  constants_generation.py  exception.py  matrices_generation.py  pickle_utils.py  systems_solver.py  timer.py  utils_all.py
(+7 files in other folders)
